--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,16 @@
 
 #root {
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
+}
+
+main {
+  min-height: 70vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 :root {
