--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,16 @@
 }
 
 main {
-  min-height: 70vh;
+  height: 70vh;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+}
+
+main > * {
+  width: 85%;
 }
 
 :root {
