--- a/src/pages/landing.css
+++ b/src/pages/landing.css
@@ -1,6 +1,6 @@
 #landing-section1 {
   /* border: thin solid var(--primary); */
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,10 +9,17 @@
 
 #landing-section1 > h1 {
   font-size: 2rem;
+  text-align: center;
   color: var(--primary);
 }
 
 #landing-section1 > p {
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: lightslategrey;
+  text-align: center;
+}
+
+.illustration {
+  height: 50%;
+  width: 100%;
 }
